hphp/hack/test/typecheck/shape/shape_structural_subtyping_of_empty_shape.php.exp
File "shape_structural_subtyping_of_empty_shape.php", line 8, characters 10-47:
Invalid return type (Typing[4057])
File "shape_structural_subtyping_of_empty_shape.php", line 7, characters 27-33:
The field `test` is missing
File "shape_structural_subtyping_of_empty_shape.php", line 8, characters 10-47:
The field `test` is defined
