hphp/hack/test/typecheck/shape/shape_structural_subtyping_of_empty_shape.php
<?hh // partial

function getUntyped() {
  return 'test';
}

function getEmptyShape(): shape() {
  return shape(
    'test' => getUntyped(),
  );
}
